[package]
name = "actix-monkey-api"
version = "0.1.0"
authors = ["Fikri Rahmat Nurhidayat <fikrirnurhidayat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.130"
uuid = "0.8"
bcrypt = "0.10.1"
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-native-tls" ] }
dotenv = "0.15.0"
